--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@thecatfour/package-test",
   "version": "1.0.0",
   "description": "This is a test github npm package.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\""
   },
@@ -18,5 +18,16 @@
   "homepage": "https://github.com/thecatfour/package-test#readme",
   "publishConfig": {
     "@thecatfour:registry": "https://npm.pkg.github.com"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.0.8",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.8",
+    "vite": "^6.1.1"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.10",
+    "typescript": "^5.7.3"
   }
 }
