--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thecatfour/package-test.git"
+    "url": "git+https://github.com/thecatfour/package-test.git"
   },
   "author": "thecatfour",
   "license": "MIT",
