--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,17 +5,17 @@
         { "path": "./tsconfig.node.json" }
     ],
     "compilerOptions": {
+        "jsx": "react",
         "outDir": "dist",
         "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"]
         },
-        "types": ["vitest/globals"],
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "skipLibCheck": true,
         "strict": true
     },
-    "include": ["src/**/*.{ts,tsx}"],
-    "exclude": ["node_modules", "**/*.test.ts", "**/*.spec.ts", "**/*.test.tsx"]
+    "include": ["src"],
+    "exclude": ["node_modules"]
 }
