--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -18,6 +18,7 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
       - run: npm ci
       - run: npm test
+      - run: npm build
 
   publish-gpr:
     needs: build
@@ -33,6 +34,7 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
+      - run: npm build
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
